@@ -1,4 +1,5 @@
 0.6-1
+- generalize swN2() by adding new arg 'derivs'
 - oce.plot.ts() gets new arg 'axes'
 - add accessor distance()
 - rename to plotTS() and plotScan() to avoid S3 check warnings
